syntax = "proto3";

package calculator;

option csharp_namespace = "CalculatorService";

service Calculator {
    rpc Sum (SumRequest) returns (SumResult);
}

message SumRequest {
    repeated double numbers = 1;
}

message SumResult {
    double sum = 1;
}